# PydanticAI_101

./: .gitignore  01-basics.ipynb  CLAUDE.md  outline-dev2.md  outline-dev3.md  outline.md  pyproject.toml
.serena/: project.yml
01-Foundations/01-Intro/: 01_hello_pydantic_ai.ipynb  01_hello_pydantic_ai.py
01-Foundations/02-Sync_vs_Async/: 02_agents-v3.py  02_agents.ipynb  02_agents.py
01-Foundations/03-Agent_Settings/: 03-agent_settings.py
01_Basics/: 01-basics copy.py  01-basics.py
02-Env_Setup/: 02-env.py
03-Agents/: 02-pydanticai_advanced_agents.py  agents-v2.py  pydantic_ai_agents.py  pydantic_ai_tutorial.py
03-Agents/archive/: agents-v2.py  fake_database.py  pydantic_ai_agents_tutorial.py
03-Configuring_LLMs/: 03-llms.py
04-Hello_World/: 04-hello.py
05-Structured_Outputs/: 05-outputs.py
06-Running/: 06-run-v2.py  06-run.py
07-Tools/: 07-tools-v2.py
08-Dependency_Injection/: main.py
09-Dynamic_System_Prompts/: README.md  db_utils.py  dynamic_prompts.py
10-Managing_Conversation/: conversation_manager.py  message_types.py
archive/01-Configuring_LLMs/: 03-llms-v2.py  03-llms.py
archive/02-Hello_World/: 04-hello-v2.py
archive/03-Agents/: 01-basic_pydanticai_agent.py
archive/03-Agents/archive/: agents.py
archive/05-Structured_Outputs/: 05-outputs-v2.py
archive/07-Tools/: 07-tools.py
archive/08-Dependency_Injection/: 08-Dependency_Injection.py
archive/10-Managing_Conversation/: README.md  basic_conversation.py
