[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydanticai-101"
version = "0.1.0"
description = "Examples and tutorials for PydanticAI"
readme = "README.md"
requires-python = ">=3.9"

[tool.ruff]
# Basic ruff configuration that can be extended by child projects
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pydanticai"]

[tool.uv]
# Configuration for uv package manager